# SteamAccountSwitcher

./: README.md  SteamAutologin.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  pyproject.toml
data/share/applications/: steamswitcher.desktop
steamaccountswitcher/: dialog.py  main.py
steamaccountswitcher/ui/: dialog.py  dialog.ui
