[tool.poetry]
name = "SteamAccountSwitcher"
version = "0.2.1"
description = "Qt Steam account switcher for linux"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]

[tool.poetry.dependencies]
PySide6 = "^6.2.2"
python = ">=3.6,<3.11"

[tool.poetry.dev-dependencies]
black = { version = "^21.12b0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
steamswitcher = "steamaccountswitcher.main:main"
steamswitcher-gui = "steamaccountswitcher.main:gui"
steamswitcher-dev = "steamaccountswitcher.main:dev"

[tool.black]
line-length = 120
